--- a/templates/skin/default/css/admin.css
+++ b/templates/skin/default/css/admin.css
@@ -1,5 +1,3 @@
-* { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-
 .modal.modal-tw { top: 1%; width: 420px; margin-left: -210px; }
 .modal.modal-tw .modal-content { padding: 15px; }
 .modal.modal-tw .modal-header { padding: 5px 15px 0; }
@@ -25,7 +23,7 @@
 
 .tw-container { margin-top: 10px; }
 	.tw-container.active .tw-item { background-color: #dff0d8; }
-.tw-item { padding: 10px; border-radius: 5px; border: 1px solid #e0e0e0; background-color: #fafafa; zoom: 1; }
+.tw-item { padding: 15px; border-radius: 5px; border: 1px solid #e0e0e0; background-color: #fafafa; zoom: 1; }
 .tw-item:before, .tw-item:after { content: ""; display: table; }
 .tw-item:after { clear: both; }
 .tw-right { float: right; margin-top: 30px; }
@@ -38,3 +36,11 @@
 .tw-page { color: #333; }
 .tw-page-include { margin-right: 5px; }
 .tw-page-exclude { margin-right: 5px; }
+
+
+.modal.modal-tw > *,
+.tw-help > * {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
