--- a/templates/skin/default/css/admin.css
+++ b/templates/skin/default/css/admin.css
@@ -21,7 +21,7 @@
 .tw-help h4 { font-size: 24px; margin-bottom: 10px; font-weight: bold; }
 .tw-help code { background: #fcfcfc; font-family: Menlo, Monaco, Consolas, monospace; border-radius: 3px; padding: 1px 5px; }
 
-.tw-container { margin-top: 10px; }
+.tw-container { position: relative; margin-top: 10px; }
 	.tw-container.active .tw-item { background-color: #dff0d8; }
 .tw-item { padding: 15px; border-radius: 5px; border: 1px solid #e0e0e0; background-color: #fafafa; zoom: 1; }
 .tw-item:before, .tw-item:after { content: ""; display: table; }
@@ -36,11 +36,8 @@
 .tw-page { color: #333; }
 .tw-page-include { margin-right: 5px; }
 .tw-page-exclude { margin-right: 5px; }
-
+.tw-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(255,255,255,.65); -webkit-transition: background .5s ease-out; -moz-transition: background .5s ease-out; -ms-transition: background .5s ease-out; -o-transition: background .5s ease-out; transition: background .5s ease-out }
+.tw-container:hover > .tw-overlay { background-color: rgba(255,255,255,0); }
 
 .modal.modal-tw *,
-.tw-help * {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-}
+.tw-help * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
