--- a/templates/skin/default/css/admin.css
+++ b/templates/skin/default/css/admin.css
@@ -9,6 +9,8 @@
 .tw-input-cols:before, .tw-input-cols:after { content: " "; display: table; }
 .tw-input-cols:after { clear: both; }
 .tw-input-cols .tw-input-col { position: relative; float: left; width: 50%; padding-right: 5px; padding-left: 5px; }
+.tw-input-cols .tw-input-col .tw-select-sep { display: inline-block; padding: 0 5px; text-align: center; }
+
 
 .tw-help { padding: 15px; background-color: #d9edf7; margin-bottom: 10px; border-radius: 5px; }
 .tw-help ul.inline li { display: inline-block; margin-right: 5px; }
@@ -23,7 +25,9 @@
 
 .tw-container { position: relative; margin-top: 10px; }
 	.tw-container.active .tw-item { background-color: #dff0d8; }
-.tw-item { padding: 15px; border-radius: 5px; border: 1px solid #e0e0e0; background-color: #fafafa; zoom: 1; }
+	.tw-container.active > .tw-item,
+	.tw-container:hover > .tw-item { opacity: 1; -moz-opacity: 1; filter: alpha(opacity=100); }
+.tw-item { padding: 15px; border-radius: 5px; border: 1px solid #e0e0e0; background-color: #fafafa; opacity: 0.5; -moz-opacity: 0.5; filter: alpha(opacity=50); zoom: 1; -webkit-transition: opacity .5s ease-out; -moz-transition: opacity .5s ease-out; -ms-transition: opacity .5s ease-out; -o-transition: opacity .5s ease-out; transition: opacity .5s ease-out; }
 .tw-item:before, .tw-item:after { content: ""; display: table; }
 .tw-item:after { clear: both; }
 .tw-right { float: right; margin-top: 30px; }
@@ -36,8 +40,6 @@
 .tw-page { color: #333; }
 .tw-page-include { margin-right: 5px; }
 .tw-page-exclude { margin-right: 5px; }
-.tw-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(255,255,255,.65); -webkit-transition: background .5s ease-out; -moz-transition: background .5s ease-out; -ms-transition: background .5s ease-out; -o-transition: background .5s ease-out; transition: background .5s ease-out }
-.tw-container:hover > .tw-overlay { background-color: rgba(255,255,255,0); }
 
 .modal.modal-tw *,
 .tw-help * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
